# yoink

./: LICENSE  README.md  pyproject.toml
archive/: yoink.py
src/yoink/: __init__.py  cli.py  config.py  ui.py  yoink_engine.py
src/yoink/pms/: __init__.py  apt.py  base.py  dnf.py  pacman.py
